# dlt

./: .env.example  .gitignore  ACTIGRAPH_README.md  README.md  actigraph_pipeline.py  actigraph_source.py  main.py  pyproject.toml  quick_start.py  s3_daily_statistics_pipeline.py  setup.py
.dlt/: config.toml  example.secrets.toml
dbt_actigraph/: .env.example  .gitignore  README.md  dbt_project.yml
dbt_actigraph/macros/: deterministic_uuid_generator.sql
dbt_actigraph/models/bronze/: sources.yml
dbt_actigraph/models/silver/: observation_components.sql  schema.yml
