[project]
name = "dlt-ingestion"
version = "0.1.0"
description = "DLT ingestion pipeline for Actigraph CentrePoint API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.11",
    "dlt[athena,deltalake,parquet]>=1.15.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
    "pendulum>=3.0.0",
    "pyiceberg>=0.10.0",
    "sqlalchemy>=2.0.44",
]
